# goal-digger-agent

./: .gitignore  Cargo.toml  README.md  aomi.toml
data/: players.json  teams.json
src/: data.rs  lib.rs  sim.rs  tool.rs
